  dependent variable in a regression list; also show the
  Durbin-Watson stat in addition to Durbin's h when a 
  regression includes a lagged dependent variable
- Fix bug in graph editing for non-English locales
- genr command: add facility for using date strings in boolean
  comparisons, e.g. "genr dummy = t > 1973:4" will work for 
  quarterly data
- Allow '#' comments in loop constructions
- sim command: allow "full" in place of specifying starting and
  ending observations, to simulate over the full sample range
- VARs: add facility to separate deterministic terms such as 
  trend and dummies from the other variables in the regression 
  list; add Durbin-Watson statistic to model printouts; add 
  impulse responses and variance decompositions
- Improvements to data-editing spreadsheet in gtk-2.0 version
- New, improved dialogs for setting the sample range and sub-
  sampling using a dummy variable
- Add color selection to the graph editing dialog and improve
  the mechanism for selecting a graph font (only applies if 
  gnuplot has the "new" PNG driver, i.e. gnuplot 3.8)
- minor fixes to the build process
- updates to gtk-1.2 GUI (make more consistent with the gtk-2.0 
  version)
- Allow for renaming of saved session models and graphs in gtk2
  version of program
- Add a "lite" version of gtksourceview to the gtk2 source package
- Add recognition of dated daily data in importing from ASCII:
  dates must be like 89/12/31, i.e. YY/MM/DD
- Update to gcc-3.3.1 and mingw-runtime-3.2 for Windows build

10/31/2003 version 1.1.6
- Test release for Fedora (Linux) packaging

10/24/2003 version 1.1.5
- Updates to manual
- Gtk2 version: Make selection dialog tall enough for wls,
  tsls and ar model selections
- Model window, graph menu: if there are two independent vars,
  offer the option of a 3D fitted/actual plot
- Set sample range: in this dialog, give as default the current
  sample range, not the full data range