@@ -2619,6 +2619,43 @@
 
     </sect2>
 
+    <sect2 id="printf"><title>printf</title>
+
+      <para>
+	Prints scalar values under the control of a format string
+	(providing a small subset of the <literal>printf()</literal>
+	statement in the C programming language). Recognized formats
+	are <literal>%g</literal> and <literal>%f</literal>, in each
+	case with the various modifiers available in C.  Examples: the
+	format <literal>%.10g</literal> prints a value to 10
+	significant figures; <literal>%12.6f</literal> prints a value
+	to 6 decimal places, with a width of 12 characters.</para>  
+
+      <para>The format string itself must be enclosed in double
+	quotes.  The values to be printed must follow the format
+	string, separated by commas.  These values should take the
+	form of either (a) the names of variables in the dataset, or
+	(b) expressions that are valid for the <command>genr</command>
+	command.  The following example prints the values of two
+	variables plus that of a calculated expression:</para>
+
+      <programlisting>
+	ols 1 0 2 3
+	genr b = coeff(2)
+	genr se_b = stderr(2)
+	printf "b = %.8g, standard error %.8g, t = %.4f\n", b, se_b, b/se_b
+      </programlisting>
+
+      <para>
+	The maximum length of a format string is 127 characters.  The
+	escape sequences <literal>\n</literal> (newline),
+	<literal>\t</literal> (tab), <literal>\v</literal> (vertical
+	tab) and <literal>\\</literal> (literal backslash) are
+	recognized.  To print a literal percent sign, use
+	<literal>%%</literal>.</para>
+
+    </sect2>
+
     <sect2 id="probit"><title>probit</title>
 
       <informaltable role="cmd" frame="none">
@@ -2822,11 +2859,12 @@
       </informaltable>
 
       <para>
-	This command creates a simple graph to help in deciding
-	whether a time series, <emphasis>y</emphasis>(t), has constant
-	variance or not.  We take the full sample t=1,...,T and divide
-	it into small subsamples of arbitrary size
-	<emphasis>k</emphasis>. The first subsample is formed by
+	Range&ndash;mean plot: this command creates a simple graph to
+	help in deciding whether a time series,
+	<emphasis>y</emphasis>(t), has constant variance or not.  We
+	take the full sample t=1,...,T and divide it into small
+	subsamples of arbitrary size <emphasis>k</emphasis>. The first
+	subsample is formed by
 	<emphasis>y</emphasis>(1),...,<emphasis>y</emphasis>(k), the
 	second is <emphasis>y</emphasis>(k+1), ...,
 	<emphasis>y</emphasis>(2k), and so on.  For each subsample we
@@ -3093,8 +3131,8 @@
 	  <tbody>
 	    <row>
 	      <entry>Arguments:</entry>
-	      <entry><replaceable>startobs endobs y a0 a1
-		  a2</replaceable> &hellip;
+	      <entry>[ <replaceable>startobs endobs</replaceable> ] 
+		<replaceable>y a0 a1 a2</replaceable> &hellip;
 	      </entry>
 	    </row>
 	  </tbody>
@@ -3116,19 +3154,30 @@
 		  x(t)*y(t-2)</varname>
 	      </entry>
 	    </row>
+	    <row>
+	      <entry></entry>
+	      <entry><command>sim y 10 0.8 -x</command>
+	      </entry>
+	      <entry>creates <varname>y(t) = 10 + 0.8*y(t-1) -
+		  x(t)*y(t-2)</varname>
+	      </entry>
+	    </row>
 	  </tbody>
 	</tgroup>
       </informaltable>
 
       <para>
 	Simulates values for <replaceable>y</replaceable> for the
-	periods <replaceable>startobs</replaceable> through
-	<replaceable>endobs</replaceable>.  The variable
-	<replaceable>y</replaceable> must have been defined earlier
-	with appropriate initial values. The formula used is
-	<varname>y(t) = a0(t) + a1(t)*y(t-1) + a2(t)*y(t-2) +
-	  &hellip;</varname> The <varname>ai(t)</varname> may either
-	be numerical constants or variable names previously defined.
+	current sample range, or for the range
+	<replaceable>startobs</replaceable> through
+	<replaceable>endobs</replaceable> if these optional arguments
+	are given.  The variable <replaceable>y</replaceable> must
+	have been defined earlier with appropriate initial values. The
+	formula used is <varname>y(t) = a0(t) + a1(t)*y(t-1) +
+	  a2(t)*y(t-2) + &hellip;</varname> The
+	<varname>ai(t)</varname> may be either numerical constants or
+	variable names previously defined; these terms may be prefixed
+	with minus sign.
       </para>
 
     </sect2>
